// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<svg
  className="root"
  style={
    Object {
      "fill": "currentColor",
    }
  }
>
  <use
    xlinkHref="#ic_book_48px"
  />
</svg>
`;

exports[`rendering renders correctly with all props 1`] = `
<svg
  className="rootSizeLarger"
  id="custom-id"
  style={
    Object {
      "fill": "currentColor",
    }
  }
>
  <use
    xlinkHref="#ic_book_48px"
  />
</svg>
`;
